Fixed layout bug on phones again.

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -84,6 +84,11 @@ p.padded-p {
 	}
 }
 
+.section-row {
+	margin-left: 0;
+	margin-right: 0;
+}
+
 .features-detail-text {
 	font-size: 125%;
 }
